devcontainer.jsonの拡張機能を追加し、Dockerfileとdocker-compose.ymlを新規作成。main.pyを削除し、terraform-apiをサブモジュールとして追加。

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,9 +9,12 @@
 		"vscode": {
 			// 拡張機能のインストール
 			"extensions": [
-				"usernamehw.errorlens", // ErrorLens
-				"ms-python.python", // Python拡張機能
-				"charliermarsh.ruff" // Ruff拡張機能
+				"usernamehw.errorlens",
+				"ms-python.python",
+				"charliermarsh.ruff",
+				"GitHub.vscode-github-actions",
+				"redhat.vscode-yaml",
+				"kennylong.kubernetes-yaml-formatter"
 			],
 			// 拡張機能の設定
 			"settings": {
