--- a/.github/workflows/run_server.yml
+++ b/.github/workflows/run_server.yml
@@ -32,10 +32,10 @@ jobs:
     - name: run server
       run: docker compose up -d
       env:
-      - PROXMOX_URL= ${{ secrets.PROXMOX_URL }}
-      - API_TOKEN_ID=${{ secrets.API_TOKEN_ID }}
-      - API_TOKEN_SECRET=${{ secrets.API_TOKEN_SECRET }}
-      - NODE=${{ vars.NODE }}
-      - TEMPLATE_ID=${{ vars.TEMPLATE_ID }}
-      - NETWORK_BRIDGE=${{ vars.NETWORK_BRIDGE }}
-      - VM_GW=${{ vars.VM_GW }}
+        PROXMOX_URL: ${{ secrets.PROXMOX_URL }}
+        API_TOKEN_ID: ${{ secrets.API_TOKEN_ID }}
+        API_TOKEN_SECRET: ${{ secrets.API_TOKEN_SECRET }}
+        NODE: ${{ vars.NODE }}
+        TEMPLATE_ID: ${{ vars.TEMPLATE_ID }}
+        NETWORK_BRIDGE: ${{ vars.NETWORK_BRIDGE }}
+        VM_GW: ${{ vars.VM_GW }}
