サブモジュールを再帰的にチェックアウトするように、CIワークフローの設定を修正

--- a/.github/workflows/run_server.yml
+++ b/.github/workflows/run_server.yml
@@ -19,6 +19,8 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v3
+      with:
+        submodules: 'recursive'  # すべてのサブモジュールを再帰的にチェックアウト
 
     # Runs a single command using the runners shell
     - name: Run a one-line script
