--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,4 @@ services:
       - TEMPLATE_ID=$TEMPLATE_ID
       - NETWORK_BRIDGE=$NETWORK_BRIDGE
       - VM_GW=$VM_GW
+      - ALLOW_ORIGINS=$ALLOW_ORIGINS
