--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "terraform-api"]
 	path = terraform-api
 	url = https://github.com/togra1997/terraform-api.git
+[submodule "terraform-UI"]
+	path = terraform-UI
+	url = https://github.com/togra1997/terraform-UI.git
